fix:Modify personal information, button misaligned

--- a/src/Web/Masa.Mc.Web.Admin/wwwroot/css/mc-admin.css
+++ b/src/Web/Masa.Mc.Web.Admin/wwwroot/css/mc-admin.css
@@ -276,10 +276,6 @@
     border-radius: 20px !important;
 }
 
-.m-text-field.m-text-field--is-booted.m-text-field--enclosed.m-text-field--outlined.m-select.m-input--dense-48 .m-input__append-inner {
-    margin-top: 14px !important;
-}
-
 .m-application .overflow-x-visible {
     overflow-x: visible !important;
 }
